--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "graphql-comments",
   "version": "1.0.0",
   "main": "data.js",
+  "type": "module",
   "scripts": {
     "dev": "nodemon index.js"
   },
@@ -13,9 +14,11 @@
     "nodemon": "^3.1.3"
   },
   "dependencies": {
-    "apollo-server": "^3.13.0",
+    "@apollo/server": "^4.10.4",
     "apollo-server-core": "^3.13.0",
     "graphql": "^16.8.1",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-yoga": "^5.3.1",
     "nanoid": "^3.3.4"
   }
 }
