Folder/Schema Structure

--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "graphql-comments",
   "version": "1.0.0",
   "main": "data.js",
-  "type": "module",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon ./src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,8 +14,11 @@
   },
   "dependencies": {
     "@apollo/server": "^4.10.4",
+    "@graphql-tools/load-files": "^7.0.0",
+    "@graphql-tools/merge": "^9.0.4",
     "apollo-server-core": "^3.13.0",
     "dotenv": "^16.4.5",
+    "glob": "^10.4.1",
     "graphql": "^16.8.1",
     "graphql-redis-subscriptions": "^2.6.1",
     "graphql-subscriptions": "^2.0.0",
