--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "1.0.0",
   "main": "data.js",
   "scripts": {
-    "dev": "nodemon ./src/index.js"
+    "start": "node ./dist/index.js",
+    "build": "babel ./src --out-dir dist --minified --copy-files",
+    "dev": "nodemon --exec babel-node ./src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@babel/cli": "^7.24.7",
+    "@babel/core": "^7.24.7",
+    "@babel/node": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "babel-plugin-module-resolver": "^5.0.2",
     "nodemon": "^3.1.3"
   },
   "dependencies": {
