--- a/server/package.json
+++ b/server/package.json
@@ -29,9 +29,11 @@
     "graphql": "^16.8.1",
     "graphql-redis-subscriptions": "^2.6.1",
     "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.16.0",
     "graphql-yoga": "^5.3.1",
     "ioredis": "^5.4.1",
     "nanoid": "^3.3.4",
-    "redis": "^4.6.14"
+    "redis": "^4.6.14",
+    "ws": "^8.17.0"
   }
 }
