--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "graphql-ws": "^5.16.0",
     "graphql-yoga": "^5.3.1",
     "ioredis": "^5.4.1",
+    "mongoose": "^8.4.1",
     "nanoid": "^3.3.4",
     "redis": "^4.6.14",
     "ws": "^8.17.0"
